gitops/k3han/manifests/echo-server/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: testing
  labels:
    name: testing
  annotations:
    argocd.argoproj.io/sync-wave: "-2"
